Firebase + Fixed UI on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -45,11 +45,13 @@
 }
 
 .pure-form {
-  .form-control {
-    @media screen 
+  @media screen 
     and (min-width: 320px) 
     and (max-width: 640px) {
-      width: 100%;
-    }  
-  }
+      padding: 1rem;
+
+      .form-control {
+        width: 100%;
+      }  
+    }
 }
